--- a/Notebook3_Larkin.ipynb
+++ b/Notebook3_Larkin.ipynb
@@ -60,7 +60,7 @@
         "data = pandas.read_csv('/content/drive/MyDrive/CS167/Datasets/vehicles.csv')\n",
         "data.head()"
       ],
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -646,7 +646,7 @@
         "clean_subset.isna().any()\n",
         "\n"
       ],
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -694,30 +694,33 @@
         "id": "zpXDrqQ-pSDI"
       },
       "source": [
-        "def classify_kNN(new_example,train_data,k):\n",
+        "def regression_kNN(new_example,train_data,k):\n",
         "    #getting a copy of the training set just so we don't\n",
         "    #mess up the original\n",
         "    train_data_copy = train_data.copy()\n",
         "    train_data_copy['distance_to_new'] = numpy.sqrt(\n",
-        "        (new_example['petal length']-train_data_copy['petal length'])**2\n",
-        "        +(new_example['sepal length']-train_data_copy['sepal length'])**2\n",
-        "        +(new_example['petal width']-train_data_copy['petal width'])**2\n",
-        "        +(new_example['sepal width']-train_data_copy['sepal width'])**2)\n",
+        "        (new_example['year']-train_data_copy['year'])**2\n",
+        "        +(new_example['cyliners']-train_data_copy['cylinders'])**2\n",
+        "        +(new_example['displ']-train_data_copy['displ'])**2)\n",
         "    \n",
         "    sorted_data = train_data_copy.sort_values(['distance_to_new'])\n",
         "    #mode to get most common thing in the first k examples in the sorted dataframe\n",
         "    #iloc to get the actual string, mode will return the string inside of a pandas Series\n",
-        "    prediction = sorted_data.iloc[0:k]['species'].mode().iloc[0] \n",
+        "    prediction = sorted_data.iloc[0:k]['comb08'].median()\n",
         "    return prediction\n",
         "\n",
         "#add regression metric function\n",
-        "def mean_absolute_error():\n",
+        "def mean_absolute_error(actual,predicted):\n",
+        "  return abs(actual-predicted).sum()/len(actual)\n",
+        "  \n",
         "\n",
-        "def classify_all_kNN(test_data,train_data,k):\n",
-        "    #apply the classify_kNN function to each item in the test data with the train\n",
+        "\n",
+        "\n",
+        "def regression_all_kNN(test_data,train_data,k):\n",
+        "    #apply the regression_kNN function to each item in the test data with the train\n",
         "    #data and k passed as the other two arguments. The result will be a series of \n",
         "    #the individual results.\n",
-        "    return test_data.apply(classify_kNN,args=(train_data,k),axis=1)"
+        "    return test_data.apply(regression_kNN,args=(train_data,k),axis=1)"
       ],
       "execution_count": null,
       "outputs": []
@@ -754,7 +757,7 @@
         "\n",
         "\n"
       ],
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
